# openclaw-manager

./: .dockerignore  .env.example  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  package-lock.json  package.json  proxy.ts
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.memd/: .last-wake  COMMANDS.md  MEMD_MEMORY.md  MEMD_WAKEUP.md  README.md  config.json  env  env.ps1  events.md  mem.md  wake-token-metrics.json  wake.md
.planning/: 25-star-atomic-execution-ledger.md  CODEBASE-ERRORS.md  GOAL-25-star-sovereign-executive-system.md  GOAL-agentsecrets-private-broker.md  GOAL-mail-replacement.md  GOAL-memory-authority-25-star.md  GOAL-memory-surface-10-star.md  GOAL-notes-25-star-docs-vault.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v0.0.4-MILESTONE-AUDIT.md  v0.0.5-MILESTONE-AUDIT.md
.planning-v0.1.0-wizard/: PROJECT.md  ROADMAP.md  STATE.md
app/: globals.css  layout.tsx  page.tsx
components/: GlobalSearch.tsx  LayoutShell.tsx  QuickCaptureWidget.tsx  Sidebar.tsx
docker/: agentshell-adapter.Dockerfile  clawcontrol-backend.Dockerfile  clawcontrol-frontend.Dockerfile  coaching-static.Dockerfile  harness-api.Dockerfile  mac-bridge.Dockerfile  memd-rag-sidecar-proxy.Dockerfile  memd-rag-sidecar.Dockerfile  memd-server-local.Dockerfile  memd_rag_sidecar_proxy.py  nginx-spa.conf  openclaw-api.Dockerfile  raganything-miner-server.py  raganything-miner.Dockerfile  supabase-gateway.conf
docs/: CONFIGURATION.md  HYPRLAND.md  SECURITY.md  SETUP.md  SOUL.md  agentshell-approval-contract.md  api-reference.md  architecture.excalidraw  architecture.md  backend-stack.md  harness-api-setup.md  hermes-infra-map.md  hermes-mac-services-runbook.md  memd-docker-migration.md  notes-parity-roadmap.md  ntfy-setup.md  openclaw-api-setup.md  overview-simple.excalidraw  repo-baseline.md  (+8 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: clawcontrol.desktop  mission-control.desktop
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_api_cache.sql  0002_rls_policies.sql  0003_sync_tables.sql  0004_mission_events.sql  0005_api_cache_user_id.sql  0006_relax_not_null.sql  0007_audit_log.sql  0007_security_events.sql  0008_audit_log.sql  0009_bjorn_modules.sql  0010_device_identity.sql  0011_memd.sql  0012_module_proposals.sql  0013_module_proposals_backend_contracts.sql  0014_generated_modules_rename.sql  0015_training_intake_forms.sql  0016_training_intake_link_expiry.sql  0017_training_intake_client_id.sql  0018_approval_kernel.sql  0019_local_vault.sql  0020_local_vault_fts.sql  0021_attachment_trash.sql  0022_comment_replies.sql  0023_career_ops.sql  0024_vault_collaboration.sql  0025_vault_collaboration_event_metadata.sql  0026_vault_collaboration_crdt_state.sql  0027_vault_collaboration_pairings.sql  0028_growth_ops.sql
src-tauri/src/: app_paths.rs  audit.rs  commands.rs  crypto.rs  db.rs  error.rs  fonts.rs  gateway_ws.rs  gotrue.rs  harness_paths.rs  lib.rs  logging.rs  main.rs  redact.rs  secrets.rs  server.rs  service_client.rs  sidecar.rs  supabase.rs  sync.rs  tailscale.rs  validation.rs
src-tauri/src/routes/: agent_shell.rs  agent_shell_support.rs  agentmail.rs  agents.rs  approvals.rs  auth.rs  bjorn.rs  cache.rs  calendar.rs  captures.rs  career.rs  changelog.rs  chat.rs  claude_sessions.rs  crons.rs  decisions.rs  deploy.rs  dlp.rs  email.rs  events.rs  export.rs  gateway.rs  gateway_events.rs  generated_modules.rs  growth.rs  habits.rs  harness_data.rs  hermes_control.rs  homelab.rs  ideas.rs  jobs.rs  knowledge.rs  koel.rs  mail_accounts.rs  mail_policy.rs  media.rs  memd.rs  memory.rs  messages.rs  misc.rs  (+28 more)
src-tauri/src/routes/pipeline/: agents.rs  complete.rs  events.rs  helpers.rs  mod.rs  registry.rs  review.rs  spawn.rs
(+1622 files in other folders)
