[package]
name = "openclaw"
version = "0.0.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
hex = "0.4"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "fs", "io-util", "process"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
regex = "1"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
ical = "0.11"
async-imap = "0.9"
async-native-tls = "0.5"
tokio-util = { version = "0.7", features = ["compat"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
dotenvy = "0.15"
url = "2"
subtle = "2"
base64 = "0.22"
sha2 = "0.11"
aes-gcm = "0.10"
argon2 = "0.5"
urlencoding = "2"
zeroize = { version = "1", features = ["derive"] }
libc = "0.2"
font-kit = "0.14"
notify = { version = "8", features = ["macos_fsevent"] }
# TODO: Uncomment to enable auto-updates (requires rebuild):
# tauri-plugin-updater = "2"

[dev-dependencies]
tempfile = "3"

[profile.dev]
debug = 1

[profile.dev.package."*"]
opt-level = 1

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
